Avatar Fix.  1. Fix Tiny Avatar Logo in header.  2. Check if uploaded avatar is readable image with warning info.  3. Auto Resized choosen image in preview (through fixed sytle in <img>, not stable..)  4. Enable custom 1:1 fixed crop, resized to 200x200 on server side.  5. Unvisible some buttons/frames during various steps in avatar uploading.

--- a/media/css/bootstrap-fileupload.css
+++ b/media/css/bootstrap-fileupload.css
@@ -51,6 +51,10 @@
   display: none;
 }
 
+.fileupload-info {
+  display: none;
+}
+
 .fileupload-inline .fileupload-controls {
   display: inline;
 }
